--- a/package.json
+++ b/package.json
@@ -27,14 +27,18 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.2.0",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.18",
     "@types/jest": "^29.5.5",
     "@types/morgan": "^1.9.5",
     "@types/node": "^20.7.0",
     "@types/supertest": "^2.0.13",
+    "@typescript-eslint/parser": "^6.7.3",
     "bun-types": "latest",
     "eslint": "^8.50.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-typescript-sort-keys": "^3.0.0",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "lint-staged": "^14.0.1",
@@ -46,5 +50,8 @@
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
+  },
+  "engines": {
+    "node": ">=8.10.0"
   }
 }
