--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@typescript-eslint/parser": "^6.7.3",
     "bun-types": "latest",
     "eslint": "^8.50.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-typescript-sort-keys": "^3.0.0",
     "husky": "^8.0.3",
