--- a/package.json
+++ b/package.json
@@ -20,17 +20,23 @@
   },
   "license": "MIT",
   "dependencies": {
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
+    "lodash": "^4.17.21",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.2.0",
+    "@types/compression": "^1.7.3",
+    "@types/cookie-parser": "^1.4.4",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.18",
     "@types/jest": "^29.5.5",
+    "@types/lodash": "^4.14.199",
     "@types/morgan": "^1.9.5",
     "@types/node": "^20.7.0",
     "@types/supertest": "^2.0.13",
