Adjust .eslintrc.json.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,19 @@
 {
-  "extends": ["eslint:recommended", "plugin:node/recommended", "prettier"],
+  "plugins": ["typescript-sort-keys", "import"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:node/recommended",
+    "plugin:@typescript-eslint/recommended",
+    "prettier"
+  ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     // Only ESLint 6.2.0 and later support ES2020.
     "ecmaVersion": 2020
   },
-  "plugins": ["typescript-sort-keys"],
   "rules": {
     "node/exports-style": ["error", "module.exports"],
-    "node/file-extension-in-import": ["error", "always"],
+    "node/file-extension-in-import": "off",
     "node/prefer-global/buffer": ["error", "always"],
     "node/prefer-global/console": ["error", "always"],
     "node/prefer-global/process": ["error", "always"],
@@ -16,7 +21,19 @@
     "node/prefer-global/url": ["error", "always"],
     "node/prefer-promises/dns": "error",
     "node/prefer-promises/fs": "error",
+    "node/no-unsupported-features/es-syntax": "off",
+    "import/no-unresolved": "error", // turn on errors for missing imports
     "typescript-sort-keys/interface": "warn",
     "typescript-sort-keys/string-enum": "warn"
+  },
+  "settings": {
+    "import/parsers": {
+      "@typescript-eslint/parser": [".ts", ".tsx"]
+    },
+    "import/resolver": {
+      "typescript": {
+        "alwaysTryTypes": true // always try to resolve types under `<root>@types` directory even it doesn't contain any source code, like `@types/unist`
+      }
+    }
   }
 }
