--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "bun-types": "latest",
     "eslint": "^8.50.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-typescript-sort-keys": "^3.0.0",
     "husky": "^8.0.3",
