--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.3.0",
   "description": " A basic starter for an express.js API with Typescript",
   "main": "src/index.ts",
+  "type": "module",
   "scripts": {
     "start": "ts-node src/index.ts",
     "dev": "ts-node src/index.ts",
@@ -36,6 +37,7 @@
     "@types/morgan": "^1.9.5",
     "@types/node": "^20.7.0",
     "@types/supertest": "^2.0.13",
+    "@typescript-eslint/eslint-plugin": "^6.7.3",
     "@typescript-eslint/parser": "^6.7.3",
     "bun-types": "latest",
     "eslint": "^8.50.0",
