--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,7 @@
   "plugins": ["@typescript-eslint", "typescript-sort-keys", "import"],
   "extends": [
     "eslint:recommended",
-    "plugin:node/recommended",
+    // "plugin:node/recommended",
     "plugin:@typescript-eslint/recommended",
     "prettier"
   ],
