--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "1.3.0",
   "description": " A basic starter for an express.js API with Typescript",
   "main": "src/index.ts",
-  "type": "module",
   "scripts": {
     "start": "ts-node src/index.ts",
-    "dev": "ts-node src/index.ts",
+    "dev": "nodemon",
     "build": "tsc",
     "lint": "eslint --fix src test",
     "test": "jest",
@@ -49,6 +48,7 @@
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "lint-staged": "^14.0.1",
+    "nodemon": "^3.0.1",
     "prettier": "^3.0.3",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
