--- a/package.json
+++ b/package.json
@@ -10,29 +10,34 @@
     "lint": "eslint --fix src test",
     "test": "jest",
     "type-check": "tsc --pretty --noEmit",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "clean": "rm -rf ./node_modules"
   },
   "keywords": [],
   "author": "Bassam Husain",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.2.0",
     "@tsconfig/recommended": "^1.0.3",
+    "@types/bcryptjs": "^2.4.4",
     "@types/compression": "^1.7.3",
     "@types/cookie-parser": "^1.4.4",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.18",
     "@types/jest": "^29.5.5",
+    "@types/jsonwebtoken": "^9.0.3",
     "@types/lodash": "^4.14.199",
     "@types/morgan": "^1.9.5",
     "@types/node": "^20.7.0",
