--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "test": "jest",
     "type-check": "tsc --pretty --noEmit",
     "prepare": "husky install",
-    "clean": "rm -rf ./node_modules"
+    "clean": "rm -rf ./node_modules",
+    "prisma-generate": "prisma generate",
+    "test-start": ". ~/.nvm/nvm.sh && /home/bassam/.bun/bin/bun run clean && /home/bassam/.bun/bin/bun install && /home/bassam/.bun/bin/bun run prisma-generate && /home/bassam/.bun/bin/bun run build && /home/bassam/.bun/bin/bun run start"
   },
   "keywords": [],
   "author": "Bassam Husain",
   "license": "MIT",
   "dependencies": {
+    "@prisma/client": "^5.4.2",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
@@ -57,6 +60,7 @@
     "lint-staged": "^14.0.1",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.3",
+    "prisma": "^5.4.2",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
