--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "src/index.ts",
   "scripts": {
     "start": "ts-node -r tsconfig-paths/register src/index.ts",
-    "dev": "nodemon",
+    "dev": "bun --watch ./src/index.ts",
     "build": "tsc",
     "lint": "eslint --fix src test",
     "test": "jest",
     "type-check": "tsc --pretty --noEmit",
     "prepare": "husky install",
-    "clean": "rm -rf ./node_modules"
+    "clean": "rm -rf ./node_modules",
+    "test-start": ". ~/.nvm/nvm.sh && /home/bassam/.bun/bin/bun run clean && /home/bassam/.bun/bin/bun install && /home/bassam/.bun/bin/bun run build && /home/bassam/.bun/bin/bun run start"
   },
   "keywords": [],
   "author": "Bassam Husain",
@@ -55,7 +56,6 @@
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "lint-staged": "^14.0.1",
-    "nodemon": "^3.0.1",
     "prettier": "^3.0.3",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
