Adjust to work with bun rather than ts-node. Unsure if eslint and prettier will work perfectly.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,29 +1,12 @@
 {
-  "plugins": ["@typescript-eslint", "typescript-sort-keys", "import"],
-  "extends": [
-    "eslint:recommended",
-    "plugin:@typescript-eslint/recommended",
-    "prettier"
-  ],
+  "plugins": ["@typescript-eslint", "typescript-sort-keys"],
+  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "prettier"],
   "parser": "@typescript-eslint/parser",
-  "parserOptions": {
-    "ecmaVersion": 2020 // Only ESLint 6.2.0 and later support ES2020.
-  },
   "rules": {
-    "import/no-unresolved": "error", // turn on errors for missing imports
     "typescript-sort-keys/interface": "warn",
-    "typescript-sort-keys/string-enum": "warn",
-    "@typescript-eslint/no-unused-vars": "warn"
-  },
-  "settings": {
-    "import/parsers": {
-      "@typescript-eslint/parser": [".ts", ".tsx"]
-    },
-    "import/resolver": {
-      "typescript": {
-        "alwaysTryTypes": true // always try to resolve types under `<root>@types` directory even it doesn't contain any source code, like `@types/unist`
-      }
-    }
-  },
-  "root": true
+    "typescript-sort-keys/string-enum": "warn"
+  }
 }
+
+
+// https://www.npmjs.com/package/eslint-plugin-import
