--- a/package.json
+++ b/package.json
@@ -4,13 +4,11 @@
   "description": "A basic starter for an express.js API with Typescript",
   "main": "src/index.ts",
   "scripts": {
-    "start": "ts-node -r tsconfig-paths/register src/index.ts",
     "dev": "bun --watch ./src/index.ts",
-    "build": "tsc",
     "lint": "eslint --fix src test",
     "test": "jest",
     "type-check": "tsc --pretty --noEmit",
-    "prepare": "husky install",
+    "prepare": "husky",
     "clean": "rm -rf ./node_modules",
     "prisma-generate": "prisma generate",
     "ready-all": ". ~/.nvm/nvm.sh && bun run clean && bun install && bunx prisma migrate dev --name init && bun run dev"
@@ -18,14 +16,16 @@
   "keywords": [],
   "author": "Bassam Husain",
   "license": "MIT",
+  "module": "index.ts",
+  "type": "module",
   "dependencies": {
     "@prisma/client": "^5.4.2",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.3",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
@@ -33,43 +33,34 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@trivago/prettier-plugin-sort-imports": "^4.2.0",
-    "@tsconfig/recommended": "^1.0.3",
-    "@types/bcryptjs": "^2.4.4",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/bun": "latest",
     "@types/compression": "^1.7.3",
     "@types/cookie-parser": "^1.4.4",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.18",
-    "@types/jest": "^29.5.5",
+    "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/lodash": "^4.14.199",
     "@types/morgan": "^1.9.5",
-    "@types/node": "^20.7.0",
-    "@types/supertest": "^2.0.13",
-    "@typescript-eslint/eslint-plugin": "^6.7.3",
-    "@typescript-eslint/parser": "^6.7.3",
-    "bun-types": "latest",
-    "eslint": "^8.50.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-typescript-sort-keys": "^3.0.0",
-    "husky": "^8.0.3",
+    "@types/supertest": "^6.0.2",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.1.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-typescript-sort-keys": "^3.2.0",
+    "husky": "^9.0.11",
     "jest": "^29.7.0",
-    "lint-staged": "^14.0.1",
-    "prettier": "^3.0.3",
-    "prisma": "^5.4.2",
-    "supertest": "^6.3.3",
-    "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.2.2"
+    "lint-staged": "^15.2.2",
+    "prettier": "^3.2.5",
+    "prisma": "^5.10.2",
+    "supertest": "^6.3.4",
+    "ts-jest": "^29.1.2"
+  },
+  "peerDependencies": {
+    "typescript": "^5.0.0"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
-  },
-  "engines": {
-    "node": ">=8.10.0"
   }
 }
