--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "esModuleInterop": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "~/*": ["./src/*"]
     }
   },
   "include": ["./src/**/*.ts", "./test/**/*.ts"],
