--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.1.1",
     "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-typescript-sort-keys": "^3.2.0",
     "husky": "^9.0.11",
     "jest": "^29.7.0",
