Adjust auth handlers with new error pattern. Delete explicit user type. Add http-errors-enhanced. Adjust schema.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,8 @@
   "parser": "@typescript-eslint/parser",
   "rules": {
     "typescript-sort-keys/interface": "warn",
-    "typescript-sort-keys/string-enum": "warn"
+    "typescript-sort-keys/string-enum": "warn",
+    "@typescript-eslint/no-unused-vars": "warn"
   }
 }
 
