--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.18.3",
     "helmet": "^7.0.0",
     "http-errors": "^2.0.0",
+    "http-errors-enhanced": "^3.0.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
@@ -41,6 +42,7 @@
     "@types/cookie-parser": "^1.4.4",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.18",
+    "@types/http-errors": "^2.0.4",
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/lodash": "^4.14.199",
