--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "express-api-starter-ts",
-  "version": "1.3.0",
-  "description": "A basic starter for an express.js API with Typescript",
+  "name": "bun-express-prisma-template",
+  "version": "2.0.0",
+  "description": "A basic starter for an express.js API with Typescript (Bun)",
   "main": "src/index.ts",
   "scripts": {
     "dev": "bun --watch ./src/index.ts",
+    "start": "bun ./src/index.ts",
     "lint": "eslint --fix src test",
     "test": "jest",
     "type-check": "tsc --pretty --noEmit",
     "prepare": "husky",
     "clean": "rm -rf ./node_modules",
-    "prisma-generate": "prisma generate",
-    "ready-all": ". ~/.nvm/nvm.sh && bun run clean && bun install && bunx prisma migrate dev --name init && bun run dev"
+    "init:all": ". ~/.nvm/nvm.sh && bun install && bunx prisma migrate dev --name init && bun run dev",
+    "clean:run": ". ~/.nvm/nvm.sh && bun run clean && bun install && bunx prisma migrate dev --name init && bun run dev",
+    "prisma:init": "bunx prisma migrate dev --name init",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev"
   },
   "keywords": [],
   "author": "Bassam Husain",
