--- a/package.json
+++ b/package.json
@@ -23,48 +23,48 @@
   "module": "index.ts",
   "type": "module",
   "dependencies": {
-    "@prisma/client": "^5.4.2",
+    "@prisma/client": "^5.21.1",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
-    "cookie-parser": "^1.4.6",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
-    "helmet": "^7.0.0",
+    "helmet": "^8.0.0",
     "http-errors": "^2.0.0",
     "http-errors-enhanced": "^3.0.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
-    "zod": "^3.22.4"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/bcryptjs": "^2.4.6",
-    "@types/bun": "latest",
-    "@types/compression": "^1.7.3",
-    "@types/cookie-parser": "^1.4.4",
-    "@types/cors": "^2.8.14",
+    "@types/bun": "^1.1.12",
+    "@types/compression": "^1.7.5",
+    "@types/cookie-parser": "^1.4.7",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.18",
     "@types/http-errors": "^2.0.4",
-    "@types/jest": "^29.5.12",
-    "@types/jsonwebtoken": "^9.0.3",
-    "@types/lodash": "^4.14.199",
-    "@types/morgan": "^1.9.5",
+    "@types/jest": "^29.5.14",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/lodash": "^4.17.12",
+    "@types/morgan": "^1.9.9",
     "@types/supertest": "^6.0.2",
-    "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@typescript-eslint/parser": "^7.1.1",
-    "eslint": "^8.57.0",
+    "@typescript-eslint/eslint-plugin": "^8.11.0",
+    "@typescript-eslint/parser": "^8.11.0",
+    "eslint": "^9.13.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-typescript-sort-keys": "^3.2.0",
-    "husky": "^9.0.11",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-typescript-sort-keys": "^3.3.0",
+    "husky": "^9.1.6",
     "jest": "^29.7.0",
-    "lint-staged": "^15.2.2",
-    "prettier": "^3.2.5",
-    "prisma": "^5.10.2",
-    "supertest": "^6.3.4",
-    "ts-jest": "^29.1.2"
+    "lint-staged": "^15.2.10",
+    "prettier": "^3.3.3",
+    "prisma": "^5.21.1",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
